# SCOPE_python_prerelease

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  VERIFICATION_ANALYSIS_REPORT.md  compare_python_matlab.py  numerical_experiment_liu.py  numerical_experiment_matlab_mod.m  numerical_experiment_mod.py  numerical_experiment_simple.py  pyproject.toml  scope_main.py  verification_figures.ipynb
scope/: __init__.py  _paths.py  constants.py  main.py  spectral.py  verification.py
scope/fluxes/: __init__.py  biochemical.py  ebal.py  heatfluxes.py  resistances.py
scope/fluxes/__pycache__/: biochemical.biochemical_core-273.py311.1.nbc  biochemical.biochemical_core-273.py311.nbi  biochemical.biochemical_vectorized-433.py311.1.nbc  biochemical.biochemical_vectorized-433.py311.nbi  biochemical.brentq_numba-108.py311.1.nbc  biochemical.brentq_numba-108.py311.nbi  biochemical.heatfluxes_core-395.py311.1.nbc  biochemical.heatfluxes_core-395.py311.nbi  biochemical.heatfluxes_vectorized-476.py311.1.nbc  biochemical.heatfluxes_vectorized-476.py311.nbi  biochemical.high_temp_inhibition-94.py311.1.nbc  biochemical.high_temp_inhibition-94.py311.nbi  biochemical.satvap_numba-102.py311.1.nbc  biochemical.satvap_numba-102.py311.nbi  biochemical.temperature_correction-88.py311.1.nbc  biochemical.temperature_correction-88.py311.nbi
scope/io/: __init__.py  config_loader.py  load_atmo.py  load_optipar.py  load_timeseries.py  output_writer.py
scope/rtm/: __init__.py  bsm.py  fluspect.py  rtmf.py  rtmo.py  rtmt.py  rtmz.py
scope/rtm/__pycache__/: rtmo.calc_Pso_array-85.py311.1.nbc  rtmo.calc_Pso_array-85.py311.nbi  rtmo.calc_layer_absorption_diffuse-138.py311.1.nbc  rtmo.calc_layer_absorption_diffuse-138.py311.nbi  rtmo.calc_layer_absorption_direct-96.py311.1.nbc  rtmo.calc_layer_absorption_direct-96.py311.nbi  rtmo.e2phot_numba-48.py311.1.nbc  rtmo.e2phot_numba-48.py311.nbi  rtmo.pso_integral-69.py311.1.nbc  rtmo.pso_integral-69.py311.nbi  rtmo.pso_integrand-59.py311.1.nbc  rtmo.pso_integrand-59.py311.nbi  rtmo.sint_1d-38.py311.1.nbc  rtmo.sint_1d-38.py311.2.nbc  rtmo.sint_1d-38.py311.nbi
scope/supporting/: __init__.py  brdf.py  fixedp_brent.py  integration.py  leafangles.py  meanleaf.py  physics.py
scope/types/: __init__.py  angles.py  canopy.py  leafbio.py  meteo.py  options.py  radiation.py  soil.py
scope_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
