[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-model"
version = "0.1.0"
description = "SCOPE: Soil Canopy Observation, Photochemistry and Energy fluxes model - a radiative transfer and energy balance model for vegetated land surfaces"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Huaize Feng"},
]
maintainers = [
    {name = "Huaize Feng"},
]
keywords = [
    "remote sensing",
    "vegetation",
    "radiative transfer",
    "photosynthesis",
    "fluorescence",
    "energy balance",
    "SCOPE",
    "SIF",
    "canopy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Drfengze/SIF"
Repository = "https://github.com/Drfengze/SIF"
Documentation = "https://scope-model.readthedocs.io"
"Bug Tracker" = "https://github.com/Drfengze/SIF/issues"
Changelog = "https://github.com/Drfengze/SIF/blob/main/SCOPE-master/python/CHANGELOG.md"

[project.scripts]
scope = "scope.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
scope = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scope"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
