[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-model"
dynamic = ["version"]
description = "SCOPE: Soil Canopy Observation, Photochemistry and Energy fluxes model - a radiative transfer and energy balance model for vegetated land surfaces"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Huaize Feng"},
]
maintainers = [
    {name = "Huaize Feng"},
]
keywords = [
    "remote sensing",
    "vegetation",
    "radiative transfer",
    "photosynthesis",
    "fluorescence",
    "energy balance",
    "SCOPE",
    "SIF",
    "canopy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "numba",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Drfengze/SCOPE_python_prerelease"
Repository = "https://github.com/Drfengze/SCOPE_python_prerelease"
Documentation = "https://github.com/Drfengze/SCOPE_python_prerelease#readme"
"Bug Tracker" = "https://github.com/Drfengze/SCOPE_python_prerelease/issues"
Changelog = "https://github.com/Drfengze/SCOPE_python_prerelease/blob/main/CHANGELOG.md"

[project.scripts]
scope = "scope.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "scope._version.__version__"}

[tool.setuptools.package-data]
scope = ["py.typed", "input/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scope"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
